--- a/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
+++ b/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
@@ -5,7 +5,7 @@ ingress:
     # such as
     #    hook: "myuniqueid.ngrok.io
     # so that webhooks from, say, github.com, will work to your local laptop
-    hook: "1b2c-4-31-142-99.ngrok.io"
+    hook: "c848-4-31-142-99.ngrok.io"
 
 kaniko:
   # lets support insecure docker registries so that we
